[package]
name = "embassy_f4_dht11"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.5.0",  features = [ "defmt", "stm32f405rg", "unstable-pac", "memory-x", "time-driver-any" ]  }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.1",  features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.5.1",  features = ["defmt"] }
embassy-futures = { version = "0.1.2"}

defmt = "1.0.1"
defmt-rtt = "1.1.0"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"

panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.9.2", default-features = false }
nb = "1.1.0"
static_cell = "2.1.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
# opt-level = "s"         #
overflow-checks = false
lto = "fat"
